# roundZero

./: .dockerignore  .gitignore  AGENTS.md  AI_VOICE_INTEGRATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  Dockerfile  FREE_TIER_ARCHITECTURE.md  FREE_TIER_SETUP.md  IMPLEMENTATION_CHECKPOINT.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SCALABILITY_ANALYSIS.md  VISION_AGENTS_OPTIMIZATIONS.md  deploy.sh  gemini.md  nixpacks.toml  railway.json  railway.toml  roundzero-action-plan.md  vercel.json
backend/: .dockerignore  .env.example  .gcloudignore  DIAGNOSTIC_README.md  Dockerfile  ENVIRONMENT_VARIABLES.md  GEMINI.md  QUICK_REFERENCE.md  README.md  REALTIME_VOICE_IMPLEMENTATION.md  check_migration_status.py  cloudbuild.yaml  debug_adk_mock.py  debug_adk_sub.py  debug_imports.py  debug_pinecone.py  diagnose_roundzero.py  diagnostic_results_20260306_002753.json  diagnostic_results_20260306_004757.json  diagnostic_results_20260306_005110.json  diagnostic_results_20260306_005248.json  import_trace.txt  logger.py  main.py  middleware.py  neon_indexes.sql  nohup.out  pyproject.toml  questions_normalized.json  railway.json  rate_limit.py  render.yaml  requirements.txt  research_notes.md  run.py  run_diagnostic.sh  settings.py  test_imports.py  test_mongo_connection.py  test_mongo_logging.py  (+11 more)
backend/agent/: answer_analyzer.py  context_tracker.py  enhanced_decision_engine.py  error_handlers.py  free_decision_engine.py  gemini_embedding_service.py  interruption_engine.py  interviewer.py  onboarding_manager.py  performance_monitor.py  performance_optimizer.py  presence_verifier.py  question_progression_engine.py  realtime_models.py  security.py  silence_detector.py  speech_buffer.py  voice_flow_controller.py
backend/app/: main.py  main.py.bak
backend/auth/: jwt_handler.py
backend/data/: index_to_pinecone.py  init_db.py  live_session_repository.py  migrate_data.py  migrate_to_mongodb.py  mongo_analysis_repository.py  mongo_connection.py  mongo_followup_repository.py  mongo_log_repository.py  mongo_repository.py  mongo_transcript_repository.py  prepare_datasets.py  questions_normalized.json  run_migration.py  schema.sql  voice_session_repository.py  (+1 more)
(+150 files in other folders)
