[project]
name = "backend"
version = "0.1.0"
description = "RoundZero AI Interview Coach Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "vision-agents[anthropic,deepgram,elevenlabs,gemini,getstream]>=0.3.8",
    "google-genai>=1.37.0",
    "pinecone>=6.0.0",
    "supermemory>=0.0.1",
    "PyJWT>=2.8.0",
    "pandas>=2.0.0",
    "upstash-redis>=1.0.0",
    "python-multipart>=0.0.22",
    "asyncpg>=0.31.0",
    "sse-starlette>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 110
target-version = "py312"
lint.select = ["E", "F", "W", "B", "I", "UP", "ASYNC"]
